--- a/css/styles.css
+++ b/css/styles.css
@@ -470,12 +470,19 @@ mark,
   color: #6c757d;
 }
 .blockquote-footer::before {
+
   content: "— ";
 }
 
 .img-fluid {
   max-width: 100%;
   height: auto;
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .img-thumbnail {
@@ -5522,6 +5529,7 @@ a.close.disabled {
 }
 
 .modal-footer {
+
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -10498,8 +10506,30 @@ section#contact form#contactForm :-ms-input-placeholder {
   color: #ced4da;
 }
 
-.footer {
+/* #footerfooter {
+  position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+   text-align: center;
+  position: relative;
+} */
+.footer{
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+#footer {
+   padding: 0.55rem 1.1rem;
+   position:fixed;
+   bottom:0;
+   width:100%;
+   height:auto;   /* Height of the footer */
+   background: #fed136;;
+}
+
+
+.img-fluid {
+
 }
