--- a/css/styles.css
+++ b/css/styles.css
@@ -10077,7 +10077,7 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  /* background-color: #212529; */
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
