--- a/css/styles.css
+++ b/css/styles.css
@@ -553,6 +553,42 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+
+.circular--square {
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  /* width: 200px; */
+  height: 500px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+/* .circular--square img {
+  width: auto;
+  height: 100%;
+  margin-left: -50px;
+} */
+
+.img-circular{
+ width: 200px;
+ height: 200px;
+ background-image: url('http://strawberry-fest.org/wp-content/uploads/2012/01/Coca-Cola-logo.jpg');
+ background-size: cover;
+ display: block;
+ border-radius: 100px;
+ -webkit-border-radius: 100px;
+ -moz-border-radius: 100px;
+}
+
+.img_container{
+    /* width:100%; */
+    /* height:100px; */
+    position: absolute;
+    text-align: center;
+    /* background:red; */
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -10145,10 +10181,10 @@ img::-moz-selection {
 }
 header.masthead {
   padding-top: 10.5rem;
-  padding-bottom: 6rem;
+  padding-bottom: 10.5rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header02.jpg");
+  background-image: url("../assets/img/header/header02.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10172,7 +10208,7 @@ header.masthead .masthead-heading {
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 17rem;
-    padding-bottom: 12.5rem;
+    padding-bottom: 17rem;
   }
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
@@ -10527,40 +10563,4 @@ section#contact form#contactForm :-ms-input-placeholder {
    width:100%;
    height:auto;   /* Height of the footer */
    background: #fed136;;
-}
-
-
-.circular--square {
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  /* width: 200px; */
-  height: 500px;
-  overflow: hidden;
-  border-radius: 50%;
-}
-
-.circular--square img {
-  width: auto;
-  height: 100%;
-  margin-left: -50px;
-}
-
-.img-circular{
- width: 200px;
- height: 200px;
- background-image: url('http://strawberry-fest.org/wp-content/uploads/2012/01/Coca-Cola-logo.jpg');
- background-size: cover;
- display: block;
- border-radius: 100px;
- -webkit-border-radius: 100px;
- -moz-border-radius: 100px;
-}
-
-.img_container{
-    /* width:100%; */
-    /* height:100px; */
-    position: absolute;
-    text-align: center;
-    /* background:red; */
 }
