--- a/css/styles.css
+++ b/css/styles.css
@@ -3046,7 +3046,7 @@ input[type=button].btn-block {
   border-left: 0.3em solid transparent;
 }
 .dropdown-toggle:empty::after {
-  margin-left: 50%;
+  margin-left: 0;
 }
 
 .dropdown-menu {
@@ -10138,12 +10138,29 @@ img::-moz-selection {
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.0rem;
-  color: #bcb7c4;
+  color: #c4c4c4;
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #fed136;
 }
+
+.btn1 {
+  display:block;
+  height: auto;
+  width: 150px;
+  border-radius: 50%;
+  border: 5px solid grey;
+  background-color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  /* font-size: 16px; */
+
+    /* margin: 4px 2px; */
+}
+
 
 @media (min-width: 992px) {
   #mainNav {
@@ -10164,7 +10181,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    /* background-color: #212529; */
+    background-color: #212529;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
